Completed as far as I got.

--- a/Covid-questions.ipynb
+++ b/Covid-questions.ipynb
@@ -3023,6 +3023,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see the distribution over time here. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
